sonoff_s26: renaming, make flash and docs
Signed-off-by: Paulo Flabiano Smorigo <pfsmorigo@gmail.com>

--- a/sonoff_s26/Makefile
+++ b/sonoff_s26/Makefile
@@ -5,6 +5,7 @@ PORT := /dev/ttyUSB0
 COMMAND := esptool.py -p ${PORT}
 
 BACKUP_FILE := backup_$(shell date --iso=seconds).bin
+TASMOTA_FILE := tasmota_6.1.1.bin
 
 default:
 	@echo "Options: install_esmtool backup"
@@ -16,6 +17,11 @@ install_esmtool: ${VIRTUALENV}
 backup:
 	source ${VIRTUALENV}/bin/activate; \
 		${COMMAND} read_flash 0x00000 0x100000 ${BACKUP_FILE}
+
+flash:
+	source ${VIRTUALENV}/bin/activate; \
+		${COMMAND} write_flash --flash_size 1MB --flash_mode dout 0x00000 \
+		${TASMOTA_FILE}
 
 ${VIRTUALENV}:
 	virtualenv -p python3 ${VIRTUALENV}
